--- a/index.Rmd
+++ b/index.Rmd
@@ -1,16 +1,16 @@
 ---
 title: 'STAT 216: Introduction to Statistics'
-author: 'Fall 2023 Syllabus'
+author: 'Spring 2024 Syllabus'
 output:
-  pdf_document:
-    toc: yes
-    toc_depth: '3'
   html_document:
     theme: cerulean
     toc: yes
     toc_depth: 3
     toc_float: yes
     css: styles.css
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
 ---
 
 ```{r setup, include=FALSE}
@@ -55,7 +55,7 @@ Office: Wilson 2-228
 
 # Course calendars
 
-* [STAT 216 calendar](calendars/F23-Stat216_Calendar.pdf)
+* [STAT 216 calendar](calendars/S24-Stat216_Calendar.pdf)
 * [MSU academic calendar](http://catalog.montana.edu/academiccalendar/)
 * [MSU finals week schedule](https://www.montana.edu/registrar/Schedules.html) (be sure to view the **Final Week Common (Combined) Section Groupings**)
 
@@ -189,11 +189,11 @@ grades %>% ggplot(aes(x=location, y=percent)) +
 
 ### Lecture Quizzes (5%)
 
-You will be expected to complete the assigned textbook reading and we recommend using the reading guides provided in the coursepack prior to each Monday class (as shown on the [STAT 216 calendar](calendars/F23-Stat216_Calendar.pdf)).  On Monday, your lead instructor will lead a guided lecture over the course material, after which you will need to complete a quiz over the lecture.  Lecture quizzes are found on Gradescope and due by **9pm every Tuesday**. Up until the 9pm Tuesday deadline, you can retake the lecture quizzes as many times as you like by clicking Resubmit in Gradescope to open and edit any question answer.
+You will be expected to complete the assigned textbook reading and we recommend using the reading guides provided in the coursepack prior to each Monday class (as shown on the [STAT 216 calendar](calendars/S24-Stat216_Calendar.pdf)).  On Monday, your lead instructor will lead a guided lecture over the course material, after which you will need to complete a quiz over the lecture.  Lecture quizzes are found on Gradescope and due by **9pm every Tuesday**. Up until the 9pm Tuesday deadline, you can retake the lecture quizzes as many times as you like by clicking Resubmit in Gradescope to open and edit any question answer.
 
 * Policy for missed lecture days: 
     + We will not record or post lectures/asynchronous learning opportunities.
-    + If you email the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu), by 9pm on the date of the missed lecture, you will receive access to a set of videos covering the lecture material which can be used to complete the lecture quiz.
+    + If you email your section instructor by 9pm on the date of the missed lecture, you will receive access to a set of videos covering the lecture material which can be used to complete the lecture quiz.
 
 * Lecture quizzes are due **Tuesday at 9pm Mountain Time each week**.
 * The lowest lecture grade will be dropped.
@@ -208,7 +208,7 @@ Every Wednesday during class, you will meet with your classmates and instructor 
 * Activities will be checked for completion at the **beginning of the following class period**.
 * Policy for missed activities: 
     + We will not record or post lectures/asynchronous learning opportunities.
-    + Students get a “free pass” for up to three activities per Unit, no questions asked. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
+    + Students get a “free pass” for up to three activities per Unit, no questions asked, *but students are expected to communicate any absences with their section instructor*. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
     + For illnesses or when students cannot attend class, we recommend that the student WebEx into class with their group (or any video conferencing tool of choice). Students attending class remotely can show their activity via WebEx for credit.
     + WebEx should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). 
 
@@ -236,7 +236,7 @@ There will be two midterm exams (worth 20% of the course grade each). Midterm ex
 
 #### _Group portion_:
 
-Group midterm exam 1 will be **September 20th**; Group midterm exam 2 will be **Octobter 25th**. 
+Group midterm exam 1 will be **February 14th**; Group midterm exam 2 will be **April 3rd**. 
 
 * Group portions of the midterms are worth 20% of your midterm exam grade.
 * Group midterm exams are open book, open notes. 
@@ -246,7 +246,7 @@ Group midterm exam 1 will be **September 20th**; Group midterm exam 2 will be **
 
 #### _Individual portion_:
 
-Individual midterm exam 1 will be **September 22nd**; Individual midterm exam 2 will be **October 27th**. 
+Individual midterm exam 1 will be **February 16th**; Individual midterm exam 2 will be **April 5th**. 
 
 * Individual portions of the midterms will be worth 80% of your midterm exam grade.
 * Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
@@ -265,7 +265,7 @@ The individual final exam is a common hour exam. **Understand that attending tha
 
 #### _Group portion_:
 
-Group final exam will be **December 6th and 8th (during normal class time)**. 
+Group final exam will be **May 1st and 3rd (during normal class time)**. 
 
 * The group portion of the final exam will be worth 20% of your exam grade.
 * The group final exams is open book, open notes. 
@@ -275,7 +275,7 @@ Group final exam will be **December 6th and 8th (during normal class time)**.
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **Thursday, December 14th from 6:00 - 7:50pm**. 
+Individual common hour final exam date and time will be **published by the Registrar soon**. 
 
 * The individual portion of the final exam will be worth 80% of your exam grade.
 * No potential final exam questions will be released.
@@ -310,9 +310,17 @@ The grade cutoffs may be shifted _downward_ at the end of the semester based on 
 
 # Late work policies
 
-* **Lecture Quizzes**: You may take the lecture quizzes in Gradescope as many times as you like up until the due date using the Resubmit button to re-open a quiz. Extensions on these quizzes are not given unless extenuating circumstances are present which are communicated to the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu).
+Note: we **highly** recommend saving your answers for each question while you complete all work in Gradescope.  This will ensure you can return to labs, lecture quizzes, or assignments at a later date without fear of losing any progress.  Additionally, Gradescope will automatically submit any saved work when the due date passes, ensuring you earn up to full credit for all problems completed on time.
 
-* **Activities and Labs**: Attendance in this course is critical for success and is therefore required. The in-class and out-of-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three activities per Unit, no questions asked. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. For illnesses or when students cannot attend class, we recommend that the student WebEx into class with their group (or any video conferencing tool of choice). Students attending class remotely can show their activity via WebEx for credit. WebEx should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your section instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your section instructor will determine an appropriate extension on the lab based on your individual circumstances.
+* **Lecture Quizzes**: 
+    - You may take the lecture quizzes in Gradescope as many times as you like up until the due date using the Resubmit button to re-open a quiz. 
+    - While the due date is Tuesdays at 9pm, you will be allowed to turn in lecture quizzes until 11:59pm on the due date.  Lecture quiz submissions that are received between 9pm and 11:59pm will receive a 5% grade deduction.
+    - Further extensions on these quizzes are not given unless extenuating circumstances are present which are communicated to the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu).
+
+* **Activities, Labs, and Assignments**: Attendance in this course is critical for success and is therefore required. The in-class and out-of-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three activities per Unit, no questions asked, but are requested to communicate with their section instructor anytime they miss class. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
+    - For illnesses or when students cannot attend class, we recommend that the student WebEx into class with their group (or any video conferencing tool of choice). Students attending class remotely can show their activity via WebEx for credit. WebEx should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). 
+    - If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your section instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your section instructor will determine an appropriate extension on the lab based on your individual circumstances.
+    - For labs and assignments, while the due dates are 9pm on Fridays and Mondays, respectively, you will be allowed to turn in work until 11:59pm on the due date.  Lab and assignment submissions that are received between 9pm and 11:59pm will receive a 5% grade deduction.  
 
 * **Exams**: 
     - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  Group exams may be taken remotely and proctored via WebEx but all individual exams must be taken in person.
@@ -370,4 +378,6 @@ This syllabus, course lectures and presentations, and any course materials provi
 ---
 # Policy on the use of AI language models
 
-In this course, you may utilize AI language models, including ChatGPT, as a resource to support your work except during in-class exams. AI language models are powerful tools developed to generate text based on the input provided. While the AI language models can help refine your writing and coding, it is important to remember that it is an AI system and not a substitute for your critical thinking and creativity. If you choose to use this tool, apply it as a supplement and do not rely solely on its suggestions. Ultimately, you are responsible for the content and quality of your work. Therefore, you should critically evaluate ChatGPT outputs for accuracy, potential bias, and relevancy. When utilizing AI language models, it is essential to ensure that your writing and coding remains original and properly attributed, including citing outputs or text generated by ChatGPT. Please see the How to cite ChatGPT in MLA Style [resource](https://style.mla.org/citing-generative-ai/). I encourage you to use AI language models to enhance your writing and coding skills, experiment with its capabilities, and learn from its suggestions. If you have any questions or concerns regarding using AI language models for assignments, please discuss them with us.
+In this course, you may utilize generative AI language models, including ChatGPT, as a resource to support your work except during in-class exams. AI language models are powerful tools developed to generate text based on the input provided. While the AI language models can help refine your writing and coding, it is important to remember that it is an AI system and not a substitute for your critical thinking and creativity. If you choose to use this tool, apply it as a supplement and do not rely solely on its suggestions. Ultimately, you are responsible for the content and quality of your work. Therefore, you should critically evaluate ChatGPT outputs for accuracy, potential bias, and relevancy. When utilizing AI language models, it is essential to ensure that your writing and coding remains original and properly attributed, including citing outputs or text generated by ChatGPT. **If you choose to use AI language models to assist you on labs or assignments, you must cite the source used. Failure to do so will result in earning a 0 on all problems in which AI language models usage has been detected.**
+
+Please see the How to cite ChatGPT in MLA Style [resource](https://style.mla.org/citing-generative-ai/). I encourage you to use AI language models to enhance your writing and coding skills, experiment with its capabilities, and learn from its suggestions. If you have any questions or concerns regarding using AI language models for assignments, please discuss them with us.
