--- a/index.Rmd
+++ b/index.Rmd
@@ -1,16 +1,16 @@
 ---
 title: 'STAT 216: Introduction to Statistics'
-author: 'Spring 2024 Syllabus'
+author: 'Fall 2024 Syllabus'
 output:
-  pdf_document:
-    toc: yes
-    toc_depth: '3'
   html_document:
     theme: cerulean
     toc: yes
     toc_depth: 3
     toc_float: yes
     css: styles.css
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
 ---
 
 ```{r setup, include=FALSE}
@@ -47,15 +47,15 @@ Office: Wilson 2-260
 ---
 
 ## Course Supervisor
-[**Dr. Mark Greenwood**](https://math.montana.edu/directory/faculty/1524138/mark-greenwood){target="_blank"}  
-email: greenwood@montana.edu  
-Office: Wilson 2-228  
+[**Dr. Stacey Hancock**](https://math.montana.edu/directory/faculty/1941032/stacey-hancock){target="_blank"}  
+email: stacey.hancock@montana.edu  
+Office: Wilson 2-195  
 
 ---
 
 # Course calendars
 
-* [STAT 216 calendar](calendars/S24-Stat216_Calendar.pdf)
+* [STAT 216 calendar](calendars/F24-Stat216_Calendar.pdf)
 * [MSU academic calendar](http://catalog.montana.edu/academiccalendar/)
 * [MSU finals week schedule](https://www.montana.edu/registrar/Schedules.html) (be sure to view the **Final Week Common (Combined) Section Groupings**)
 
@@ -110,11 +110,13 @@ Two "textbooks" are required for this course:
 1. [_Montana State Introductory Statistics with R_](https://mtstateintrostats.github.io/IntroStatTextbook/) --- our free, online textbook
 2. _STAT 216 Coursepack_ --- workbook with reading guides and in-class activities and labs
 
-The *Stat 216 Coursepack* of in-class activities is available for purchase in the [MSU Bookstore](https://www.msubookstore.org/). You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Students are expected to bring the coursepack to class each day and to complete the activities within the coursepack. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.  
+The *Stat 216 Coursepack* of in-class activities is available for purchase in the [MSU Bookstore](https://www.msubookstore.org/). You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Students are expected to bring the coursepack to class each day and to complete the activities within the coursepack. 
 
-* [_STAT 216 Coursepack_: Preface](Coursepack-Preface.pdf)
-* [_STAT 216 Coursepack_: Chapter 1](Coursepack-Week1.pdf)
-<!-- * [_STAT 216 Coursepack_: Chapter 2](Coursepack-Week2.pdf) -->
+<!-- Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.   -->
+
+<!-- * [_STAT 216 Coursepack_: Preface](Coursepack-Preface.pdf) -->
+<!-- * [_STAT 216 Coursepack_: Chapter 1](Coursepack-Week1.pdf) -->
+<!-- * [_STAT 216 Coursepack_: Chapter 2](Coursepack-Week2.pdf) --> 
 
 ### RStudio
 We will be using the statistical software [R](https://www.r-project.org/) through the IDE [RStudio](https://rstudio.com/products/rstudio/) for data visualization and statistical analyses. 
@@ -144,13 +146,18 @@ All students are required to have a word processor and spreadsheet software inst
  
 # Course format and organization
  
-Stat 216 will meet 3 times per week. Each week, students will:
+Stat 216 will meet 3 times per week. 
 
-* **read** assigned sections of the online textbook on that week's content ***prior*** to the first day of class each week.
-* use **guided notes** from the required coursepack during lectures the first day of class each week and complete **lecture quizzes** on  [Gradescope](https://www.gradescope.com/) after class.
-* **complete** assigned out-of-class activities prior to the second day of class each week.
-* **work** in assigned groups two class periods per week for **in-class group activities and discussion** (Wednesdays) and **in-class Rstudio labs** (Friday), with these groups changing each unit. 
-* complete one **assignment** in [Gradescope](https://www.gradescope.com/).
+* During class meetings, students will **complete** activities and labs in assigned groups with the assistance of the teaching team.
+* Per the [STAT 216 calendar](calendars/F24-Stat216_Calendar.pdf), the course will be broken down into topics, modules, and units.
+* To begin each topic, students will 
+  + **read** assigned sections of the online textbook on that topic's content and complete (optionally) the reading guides in the Stat 216 coursepack.
+  + **watch** assigned videos on D2L and complete (optionally) the video guides located in the Stat 216 coursepack
+  + complete **video/reading** quizzes on [Gradescope](https://www.gradescope.com/) **before** their class meets.
+* Instructor-lead **Guided Activities** will take place during class, with students able to test themselves on the topic during **Activity** days.
+* After all activities within a module have been completed, students will complete a **Module Lab**, which will be completed and turned into Gradescope during class.
+* After all modules within a unit are complete, students will complete a **Midterm Exam** over the topics covered.
+* Students will also complete one **assignment** in [Gradescope](https://www.gradescope.com/) per week, typically due on Mondays.
 
 
 ---
@@ -162,47 +169,41 @@ Your grade in STAT 216 will contain the following components.
 ```{r, echo=FALSE, warning=FALSE, message=FALSE, out.width="75%", fig.align="center"}
 grades <- tribble(
   ~category,  ~percent,
-  "Lecture Quizzes", 5,
+  "Video/Reading Quizzes", 5,
   "Activities", 10,
-  "Labs", 10,
-  "Assignments", 10,
-  "Midterm exams (2)", 40,
-  "Final exam", 25
+  "Module Labs", 10,
+  "Assignments", 15,
+  "Midterm exams (2)", 30,
+  "Final exam", 30
 )
-grades$category <- fct_relevel(grades$category, "Lecture Quizzes", "Activities", "Labs" , "Assignments", "Midterm exams (2)", "Final exam")
+grades$category <- fct_relevel(grades$category, "Video/Reading Quizzes", "Activities", "Module Labs" , "Assignments", "Midterm exams (2)", "Final exam")
 grades$location <- rep(1, 6)
 grades %>% ggplot(aes(x=location, y=percent)) +
   geom_col(aes(fill=category), col='black') + 
   guides(fill=FALSE) + 
   geom_text(aes(x=rep(1, 6), 
-                label=c("Lecture Quizzes (5%)",
+                label=c("Video/Reading Quizzes (5%)",
                         "Activities (10%)",
-                        "Labs (10%)",
-                        "Assignments (10%)",
-                        "Midterm exams (40%)",
-                        "Final exam (25%)"), 
-                y=c(97.5,90,80,70,45,12.5))) + 
+                        "Module Labs (10%)",
+                        "Assignments (15%)",
+                        "Midterm exams (30%)",
+                        "Final exam (30%)"), 
+                y=c(97.5,90,80,67.5,45,15))) + 
   labs(x='', y='Cumulative percent') + 
   theme(axis.text.x = element_blank()) +
   scale_fill_manual(values=pal)
 ```
 
-### Lecture Quizzes (5%)
+### Video/Reading Quizzes (5%)
 
-You will be expected to complete the assigned textbook reading and we recommend using the reading guides provided in the coursepack prior to each Monday class (as shown on the [STAT 216 calendar](calendars/S24-Stat216_Calendar.pdf)).  On Monday, your lead instructor will lead a guided lecture over the course material, after which you will need to complete a quiz over the lecture.  Lecture quizzes are found on Gradescope and due by **9pm every Tuesday**. Up until the 9pm Tuesday deadline, you can retake the lecture quizzes as many times as you like by clicking Resubmit in Gradescope to open and edit any question answer.
+To begin each topic, you will be expected to complete the assigned textbook reading and watch the assigned videos in D2L prior to class. We recommend using the reading and video guides provided in the coursepack (as shown on the [STAT 216 calendar](calendars/S24-Stat216_Calendar.pdf)). You will need to complete reading/video quizzes, which are found on Gradescope and due by **the start of class**. Up until your class time, you can retake the video/reading quizzes as many times as you like by clicking Resubmit in Gradescope to open and edit any question answer.
 
-* Policy for missed lecture days: 
-    + We will not record or post lectures/asynchronous learning opportunities.
-    + If you email your section instructor by 9pm on the date of the missed lecture, you will receive access to a set of videos covering the lecture material which can be used to complete the lecture quiz.
-
-* Lecture quizzes are due **Tuesday at 9pm Mountain Time each week**.
+* Video/reading quizzes are due **before your class starts on dates indicated on the course calendar**.
 * The lowest lecture grade will be dropped.
 
 ### Activities (10%)
 
-After Monday lectures, there will be an out-of-class activity to complete.  The out-of-class activity can be found in your coursepack and will be handed in at the start of class on Wednesday.  
-
-Every Wednesday during class, you will meet with your classmates and instructor to work through that day's coursepack group activity. Attendance and completion of the in-class and out-of-class activities counts towards this portion of your grade. 
+Every class day, you will meet with your classmates and instructor team to work through that day's coursepack group activity. Attendance and completion of the in-class activities counts towards this portion of your grade. 
 
 * Activities must be completed in the Stat 216 Coursepack. **If you prefer to complete the activity on a pdf copy using a stylus-enabled device, please speak to your instructor, and he or she will provide you with a PDF copy of the coursepack.**
 * Activities will be checked for completion at the **beginning of the following class period**.
@@ -213,71 +214,57 @@ Every Wednesday during class, you will meet with your classmates and instructor 
     + WebEx should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). 
 
 
-### Labs (10%)
+### Module Labs (10%)
 
-Every Friday, you will meet with your classmates and instructor to work through that day's coursepack Rstudio group lab.  The lab will reinforce the ideas learned in the activities and lecture completed Monday and Wednesday but with the use of Rstudio for exploring and analyzing data.  
+After all topics within a module have been completed, you will meet with your classmates and instructor team to work through a Rstudio group lab, which is provided in your coursepack and will be completed during class time.  The lab will reinforce the topics learned in the activities but with the use of Rstudio for exploring and analyzing data.  
 
-* Each group will turn in selected questions from the lab to Gradescope. Labs are due **Friday at 9pm Mountain Time each week**.
-    - Exceptions: There will be no labs due on exam weeks or weeks with only two class meetings due to university holidays.
+* Each group will turn in selected questions from the lab to Gradescope. Labs are due **at 9 pm Mountain Time on dates indicated on the course calendar**.
 * The lowest lab grade will be dropped.
 * Each student will also turn in each lab for completion at the **beginning of the following class period**.
 
 
-### Assignments (10%)
+### Assignments (15%)
 
 You will complete weekly assignments in [Gradescope](https://www.gradescope.com/). These should be completed individually (meaning all answers should be written in your own words), but you may use your classmates, tutors, or your instructor/co-instructor/TA for assistance. 
 
 * Weekly assignments are due **Monday at 9pm Mountain Time each week, covering the previous week's content**.
 * The lowest assignment grade will be dropped.
 
-### Midterm exams (40%)
+### Midterm exams (30%)
 
-There will be two midterm exams (worth 20% of the course grade each). Midterm exams will be taken in class during your normal in-class time. Each exam has a group (Wednesday) and individual (Friday) component.  A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+There will be two midterm exams (worth 15% of the course grade each). Midterm exams will be taken in class during your normal in-class time. A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
 
-#### _Group portion_:
+Individual midterm exam 1 will be **September 18th**; Individual midterm exam 2 will be **October 23rd**. 
 
-Group midterm exam 1 will be **February 14th**; Group midterm exam 2 will be **April 3rd**. 
-
-* Group portions of the midterms are worth 20% of your midterm exam grade.
-* Group midterm exams are open book, open notes. 
-* You will be allowed a calculator on the group midterm exams. 
-* You **will** be required to use Rstudio on the group midterm exams.
-* **If you miss more than 3 class days within a unit, you must complete the group exam individually.**
-
-#### _Individual portion_:
-
-Individual midterm exam 1 will be **February 16th**; Individual midterm exam 2 will be **April 5th**. 
-
-* Individual portions of the midterms will be worth 80% of your midterm exam grade.
-* Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
+* Potential midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
 * On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.
-* Individual midterm exams are closed book, closed notes. 
+* Midterm exams are closed book, closed notes. 
 * A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).
-* You will be allowed a calculator on the individual midterm exams. 
-* You will **not** be required to use Rstudio on the individual midterm exams.
+* You will be allowed a calculator on the midterm exams. 
+* You will **not** be required to use Rstudio on the midterm exams.
 
 
-### Final exam (25%)
+### Final exam (30%)
 
-The group final exam will be taken in class during your normal in-class time on the final Wednesday and Friday of classes (prior to Finals week). A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+The final exam will consist of two parts: a group portion and an individual portion.  The group final exam will be taken in class during your normal in-class time on the final Wednesday and Friday of classes (prior to Finals week). A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
 
 The individual final exam is a common hour exam. **Understand that attending that common hour exam is part of your commitment when you enroll in the course.**
 
 #### _Group portion_:
 
-Group final exam will be **May 1st and 3rd (during normal class time)**. 
+Group final exam will be **December 4th and 6th (during normal class time)**. 
 
-* The group portion of the final exam will be worth 20% of your exam grade.
-* The group final exams is open book, open notes. 
+* The group portion of the final exam will be worth 20% of your final exam grade.
+* The group final exam is open book, open notes. 
 * You will be allowed a calculator on the group final exam. 
 * You **will** be required to use Rstudio on the group final exam.
 * **If you miss more than 3 class days in Unit 3, you must complete the group exam individually.**
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **Tuesday, May 7th from 6:00 - 7:50 PM**. 
+Individual common hour final exam will be **TBD (set by the Registrar, be sure to check the Common Hour Final listings!)**. 
 
-* The individual portion of the final exam will be worth 80% of your exam grade.
+* The individual portion of the final exam will be worth 80% of your final exam grade.
 * No potential final exam questions will be released.
 * The individual final exam is closed book. 
 * You will be allowed to create a one page note sheet for the exam.  You will also be provided a one page formula sheet during the exam.
@@ -312,18 +299,18 @@ The grade cutoffs may be shifted _downward_ at the end of the semester based on 
 
 Note: we **highly** recommend saving your answers for each question while you complete all work in Gradescope.  This will ensure you can return to labs, lecture quizzes, or assignments at a later date without fear of losing any progress.  Additionally, Gradescope will automatically submit any saved work when the due date passes, ensuring you earn up to full credit for all problems completed on time.
 
-* **Lecture Quizzes**: 
-    - You may take the lecture quizzes in Gradescope as many times as you like up until the due date using the Resubmit button to re-open a quiz. 
-    - While the due date is Tuesdays at 9pm, you will be allowed to turn in lecture quizzes until 11:59pm on the due date.  Lecture quiz submissions that are received between 9pm and 11:59pm will receive a 5% grade deduction.
-    - Further extensions on these quizzes are not given unless extenuating circumstances are present which are communicated to the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu).
+* **Video/Reading Quizzes**: 
+    - You may take the video/reading quizzes in Gradescope as many times as you like up until the due date using the Resubmit button to re-open a quiz. 
+    <!-- - While the due date is Tuesdays at 9pm, you will be allowed to turn in lecture quizzes until 11:59pm on the due date.  Lecture quiz submissions that are received between 9pm and 11:59pm will receive a 5% grade deduction. -->
+    - Extensions on these quizzes are not given unless extenuating circumstances are present which are communicated to the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu).
 
-* **Activities, Labs, and Assignments**: Attendance in this course is critical for success and is therefore required. The in-class and out-of-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three activities per Unit, no questions asked, but are requested to communicate with their section instructor anytime they miss class. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
+* **Activities, Labs, and Assignments**: Attendance in this course is critical for success and is therefore required. The in-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three activities per Unit, no questions asked, but are requested to communicate with their section instructor anytime they miss class. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
     - For illnesses or when students cannot attend class, we recommend that the student WebEx into class with their group (or any video conferencing tool of choice). Students attending class remotely can show their activity via WebEx for credit. WebEx should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). 
     - If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your section instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your section instructor will determine an appropriate extension on the lab based on your individual circumstances.
-    - For labs and assignments, while the due dates are 9pm on Fridays and Mondays, respectively, you will be allowed to turn in work until 11:59pm on the due date.  Lab and assignment submissions that are received between 9pm and 11:59pm will receive a 5% grade deduction.  
+    - For labs and assignments, while the due dates are 9 pm on the day the lab is completed in class and Mondays, respectively, you will be allowed to turn in work until 11:59 pm on the due date.  Lab and assignment submissions that are received between 9 pm and 11:59 pm will receive a 5% grade deduction.  
 
 * **Exams**: 
-    - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  Group exams may be taken remotely and proctored via WebEx but all individual exams must be taken in person.
+    - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  The group final exam may be taken remotely and proctored via WebEx but all individual exams must be taken in person.
     - If you are ill to the point of not being able to take the exam, please email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  
     - Students who miss the exam without contacting the instructor prior to the exam will receive a zero on the exam.
     - Work is not a legitimate reason for an exam absence.
